# rusty-tutor

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20230129142906_create_users.up.sql  20230129142928_create_adverts.down.sql  20230129142928_create_adverts.up.sql  20230129191847_create_opinions.down.sql  20230129191847_create_opinions.up.sql  20230130202657_create_services.up.sql
src/: consts.rs  db.rs  errors.rs  main.rs  response.rs  types.rs  utils.rs  validate.rs
src/extractors/: jwt.rs  mod.rs  path.rs
src/handlers/: adverts.rs  auth.rs  mod.rs  opinions.rs  user.rs
src/models/: adverts.rs  mod.rs  opinions.rs  users.rs
src/scopes/: adverts.rs  auth.rs  mod.rs  user.rs
